<resources>
    <string name="app_name">sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="new_game">new game</string>
    <string name="space" />
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_15">15</string>
    <string name="_25">25</string>
    <string name="start_new_game">Start new game?</string>
    <string name="are_ypu_sure">Are you sure? This action will delete your current progress</string>
    <string name="congrats">Congratulations!!!</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="activate_help">Help in solving</string>
    <string name="unfinished_games">unfinished games</string>
    <string name="sudoku_game">Sudoku game</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="game_settings">Game settings</string>
    <string name="delete_all_fields">Delete all fields?</string>
    <string name="reset_field">Reset field</string>
    <string name="reset_this_field">Reset this field?</string>
    <string name="save_this_field">Save this field?</string>
    <string name="field_is_empty">This field is empty and can be deleted</string>
</resources>
